--- a/angular-base-2/src/app/admin/admin.component.html
+++ b/angular-base-2/src/app/admin/admin.component.html
@@ -25,7 +25,7 @@
                                 <button class="btn btn-sm btn-danger" (click)="deleteProduct(myProduct.id)">
                                     <i class="bi bi-trash"></i> Delete
                                 </button>
-                                <a [routerLink]="['/product-edit', myProduct.id]" class="btn btn-sm btn-primary">
+                                <a [routerLink]="['/admin/product-edit', myProduct.id]" class="btn btn-sm btn-primary">
                                     <i class="bi bi-pencil"></i> Edit
                                 </a>
                             </div>
